AC_INIT([libesl], [1.0], [schwering@kbsg.rwth-aachen.de])
AM_INIT_AUTOMAKE([foreign -Wall])
PKG_CHECK_MODULES([CHECK], [check >= 0.9.4])
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CC_STDC
AM_PROG_AR
LT_INIT([disable-shared])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
AC_CONFIG_MACRO_DIR([m4])
AC_OUTPUT

