TESTS = check_vector check_set check_map check_literal check_clause
check_PROGRAMS = check_vector check_set check_map check_literal check_clause
check_vector_SOURCES = check_vector.c $(top_builddir)/src/vector.h
check_vector_CFLAGS = @CHECK_CFLAGS@
check_vector_LDADD = $(top_builddir)/src/libesl.a -lrt -lm @CHECK_LIBS@
check_vector_LDFLAGS = -pthread
check_set_SOURCES = check_set.c $(top_builddir)/src/set.h
check_set_CFLAGS = @CHECK_CFLAGS@
check_set_LDADD = $(top_builddir)/src/libesl.a -lrt -lm @CHECK_LIBS@
check_set_LDFLAGS = -pthread
check_map_SOURCES = check_map.c $(top_builddir)/src/map.h
check_map_CFLAGS = @CHECK_CFLAGS@
check_map_LDADD = $(top_builddir)/src/libesl.a -lrt -lm @CHECK_LIBS@
check_map_LDFLAGS = -pthread
check_literal_SOURCES = check_literal.c $(top_builddir)/src/literal.h
check_literal_CFLAGS = @CHECK_CFLAGS@
check_literal_LDADD = $(top_builddir)/src/libesl.a -lrt -lm @CHECK_LIBS@
check_literal_LDFLAGS = -pthread
check_clause_SOURCES = check_clause.c $(top_builddir)/src/clause.h
check_clause_CFLAGS = @CHECK_CFLAGS@
check_clause_LDADD = $(top_builddir)/src/libesl.a -lrt -lm @CHECK_LIBS@
check_clause_LDFLAGS = -pthread

